# SubAgentTesting

./: .env.example  .gitignore  DOCUMENTATION.md  README.md  README_verbose.md  config.example.yaml  config.yaml  pyproject.toml  qwen__qwen3-coder:free.2026-02-10_180940.json  setup.cfg
agent_architectures/: __init__.py  base.py  constants.py  factory.py  legacy.py  mini_swe_agent.py  telemetry_adapter.py
agents/: minimax2_1.yaml  my_tools_test.yaml  openrouter_free.yaml  qwen2_5_coder.yaml  qwen3-thinking.yaml  qwen3_coder_free.yaml  qwen3_next_80b_free.yaml  skills_no_bash.yaml  spec_loader.py
benchmarks/: base_evaluator.py  contracts.py  discovery.py  registry.py
portable_agent_runner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
runs/: predictions.jsonl
runtime/: agent_runtime.py  artifact_policy.py  backend_factory.py  config_loader.py  config_models.py  eval_service.py  log_summary_service.py  manifest_store.py  metrics.py  model_backend.py  prompt_messages.py  run_service.py  schemas.py  task_context.py  tool_quality.py  tools.py
scripts/: bootstrap.sh  cli.py
skills/: loader.py
tests/: debug_coord_matrix.py  deep_debug.py  reproduce_exact_issue.py  test_agent_architecture_factory.py  test_agent_profiles_tools_swap.py  test_agent_prompts_contract.py  test_agent_runtime_tool_quality.py  test_artifact_policy.py  test_benchmark_discovery.py  test_cli_artifact_enforcement.py  test_cli_eval_summary.py  test_config_loader_models.py  test_final_investigation.py  test_log_summary_service.py  test_manifest_store_strictness.py  (+15 more)
(+53 files in other folders)
