[metadata]
name = portable-agent-runner
version = 0.1.0

[options]
packages = find:
install_requires =
    typer>=0.12.0
    rich>=13.7.0
    pyyaml>=6.0.2
    httpx>=0.26.0
    pydantic>=2.6.0
    pytest>=8.0.0
    python-dotenv>=1.0.1
python_requires = >=3.10

[options.entry_points]
console_scripts =
    agent = scripts.cli:app
